# CEA_Wrap

./: .gitignore  CEA_Wrap.py  MANIFEST.in  Note on HTPB.md  README.md  build.bat  build_noupload.bat  documentation.txt  pyproject.toml  setup.cfg  setup.py  thermo.lib  very_simple_example.py
CEA_Wrap/: CEA.py  __init__.py  __main__.py  cea_interface.py  gui.py  gui_base.py  gui_base.ui  mydifflib.py  thermo_lib.py  utils.py  utils_low.py  very_simple_example.py  wrapper.py
CEA_Wrap/assets/: __init__.py  thermo_elements.json  thermo_lib_recompile.bat  thermo_spg.inp  thermo_spg.out
examples/: TP_test.py  basic_rocket.py  defining_problems.py  frozen_rocket.py  looping.py  optimization.py  thermo_interface.py  very_simple_example.py
tests/: common.py  create_reference_outputs.py  test_problems.py
