[metadata]
name = CEA_Wrap
version = 1.7.2
description = A Python-Based wrapper for the NASA CEA Thermochemical Code
long_description = 
  **PyPI NOTE: This package is installed with 'pip install CEA_Wrap' with an underscore. PyPI doesn't show underscores in package names**\n\n
  file: README.md
long_description_content_type = text/markdown
url = https://github.com/civilwargeeky/CEA_Wrap
author = Daniel Klinger
author_email = klingerd@purdue.edu
license = GNU GPL
license_files = LICENSE
requires = appdirs
packages = find:


[options]
include_package_data=True
zip_safe=False
install_requires = 
  appdirs
python_requires = >=3.8